tests/cases/alloc_certificate/reject/fresh_constructor.pr
type Box = Box(Int)

fn fresh(x : Int) : Box without alloc = Box(x)
